[package]
name = "malakal"
description = "a day-planning calendar app based on egui"
version = "0.1.9"
edition = "2021"
license-file = "LICENSE"
readme = "README.org"
repository = "https://github.com/shouya/malakal"
homepage = "https://github.com/shouya/malakal"
documentation = "https://docs.rs/malakal"
keywords = ["egui", "calendar", "desktop"]
categories = ["gui"]

# optimize dependencies for debug builds
[profile.dev.package."*"]
opt-level = 2

[dependencies]
eframe = "0.22.0"
chrono = { version = "0.4.19", default-features = false, features = ["std"] }
chrono-tz = "0.6.1"
derive_builder = "0.10.2"
intervaltree = "0.2.7"
uuid = { version = "0.8.2", features = ["v4"] }
# only for ics generation
ics = "0.5.7"
# only for ics parsing
ical = { version = "0.7.0", features = ["ical"] }

# for webdav support (work in progress)
# kitchen-fridge = { git = "https://github.com/shouya/kitchen-fridge.git" }

rusqlite = {version = "0.26.3", features = ["bundled", "chrono"] }
anyhow = { version = "1.0.53" }
log = "0.4.14"
env_logger = "0.9.0"
regex = "1.5.4"
toml = "0.5.8"
serde = "1.0.136"
humantime = "2.1.0"
notify-rust = { version = "4.7.0" }
timer = "0.2.0"
sysinfo = "0.24.3"
serde_with = { version = "1.14.0", features = ["chrono"] }
dirs = "4.0.0"
filetime = "0.2.17"
bimap = "0.6.2"
egui_autocomplete = "0.1.1"
